--- a/src/App.css
+++ b/src/App.css
@@ -1,39 +1,63 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+#root {
+  width: 100%;
+  height: 100%;
 }
 
 .App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+  display: flex;
+  column-gap: 50px;
+  padding: 20px;
+  align-items: center;
+}
+
+nav > ul {
+  display: flex;
+  column-gap: 30px;
+}
+
+.App {
+  padding: 30px;
+}
+
+.bookList {
+  border: 2px solid rgb(114, 103, 103);
+  background-color: aliceblue;
+}
+
+form {
   display: flex;
   flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  padding: 30px;
 }
 
-.App-link {
-  color: #61dafb;
+form > div {
+  display: flex;
+  flex-direction: column;
+  border-top: 1px solid rgb(68, 60, 60);
+  row-gap: 30px;
+  padding: 20px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
+.bookItem {
+  display: flex;
+  padding: 20px;
+}
 
-  to {
-    transform: rotate(360deg);
-  }
+.bookItem > div {
+  flex: 1;
+}
+
+.inputCont {
+  display: flex;
+  justify-content: flex-start;
+  column-gap: 20px;
+}
+
+input[type='text'] {
+  width: 100%;
+  padding: 20px;
+}
+
+input[type='submit'] {
+  width: 25%;
 }
