--- a/src/index.css
+++ b/src/index.css
@@ -48,4 +48,7 @@ body {
   height: 100vh;
   align-content: flex-start;
   overflow-x: hidden;
+  border-radius: 4px;
+  box-shadow: 0 0 60px 0 rgba(0, 0, 0, 0.05);
+  background-color: #fafafa;
 }
